--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,11 @@ __pycache__/
 .DS_Store
 api_key.py
 thumbs.db
+all-geocodes-v2018.xlsx
+state-geocodes-v2018.xlsx
+us-counties.csv
+us-states.csv
+us.csv
 
 # C extensions
 *.so
